--- a/baojia_lk_zl.html
+++ b/baojia_lk_zl.html
@@ -495,7 +495,7 @@
                     <div class="clearfix"></div>
                     <div class="total">
                         <p><input  value="总价 0 元（不含税票）"/></p>
-                        <p class="connect-info">如您有任何疑问，24小时欢迎您致电领科 章经理: <span class="phone">13682506947</span></p>
+                        <p class="connect-info" style="font-size:18px;">如您有任何疑问，24小时欢迎您致电领科 章经理: <span class="phone">13682506947</span></p>
                     </div>        
                 </div>
             
